--- a/config/database.yml
+++ b/config/database.yml
@@ -24,8 +24,8 @@ production:
   <<: *default
   database: <%= ENV['DB_DATABASE'] %>
   adapter: postgresql
-  encoding: utf8mb4
-  charset: utf8mb4
+  encoding: unicode
+  # charset: utf8mb4
   collation: utf8mb4_general_ci
   host: <%= ENV['DB_HOST'] %>
   username: <%= ENV['DB_USERNAME'] %>
