[add]databese.yml修正

--- a/config/database.yml
+++ b/config/database.yml
@@ -22,11 +22,11 @@ test:
 
 production:
   <<: *default
-  database: <%= ENV['DB_DATABASE'] %>
+  # database: <%= ENV['DB_DATABASE'] %>
   adapter: postgresql
   encoding: unicode
   # charset: utf8mb4
-  collation: utf8mb4_general_ci
-  host: <%= ENV['DB_HOST'] %>
-  username: <%= ENV['DB_USERNAME'] %>
-  password: <%= ENV['DB_PASSWORD'] %>
+  # collation: utf8mb4_general_ci
+  # host: <%= ENV['DB_HOST'] %>
+  # username: <%= ENV['DB_USERNAME'] %>
+  # password: <%= ENV['DB_PASSWORD'] %>
