--- a/config/database.yml
+++ b/config/database.yml
@@ -25,6 +25,7 @@ production:
   # database: <%= ENV['DB_DATABASE'] %>
   adapter: postgresql
   encoding: unicode
+  pool: 5
   # charset: utf8mb4
   # collation: utf8mb4_general_ci
   # host: <%= ENV['DB_HOST'] %>
