--- a/config/database.yml
+++ b/config/database.yml
@@ -25,6 +25,7 @@ production:
   adapter: postgresql
   encoding: unicode
   pool: 5
+  url: <%= ENV["DATABASE_URL"] %>
   # charset: utf8mb4
   # collation: utf8mb4_general_ci
   # host: <%= ENV['DB_HOST'] %>
